--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "server": "nodemon server/server",
     "client": "react-scripts start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "react-scripts build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
